# vanpy

./: .gitignore  README.md  VoiceCharacterizer.py  pipeline.yaml  pyproject.toml  requirements.txt  requirements_full.txt  run.py  setup.cfg  setup.py  voice_characterization_framework.py_tmp
audio_pipeline/core/: BasePipline.py  ClassificationPipline.py  CombinedPipeline.py  ComponentPayload.py  FeatureExtractionPipline.py  PiplineComponent.py  PreprocessPipline.py
audio_pipeline/core/feature_extraction_components/: LibrosaFeaturesExtractor.py  PyannoteEmbedding.py  SpeechBrainEmbedding.py
audio_pipeline/core/preprocess_components/: FilelistDataFrameCreator.py  INAVoiceSeparator.py  PyannoteVAD.py  SileroVAD.py  WAVConverter.py
audio_pipeline/core/segment_classification_components/: CVAgeClassifier.py  CVGenderClassifier.py  IEMOCAPEmotionClassifier.py  Wav2Vec2STT.py
core/: BasePipline.py  ClassificationPipline.py  CombinedPipeline.py  FeatureExtractionPipline.py  PipelineClassificationComponent.py  PipelinePreprocessingComponent.py  Pipline.py  PiplineComponent.py  PreprocessPipline.py  SpeakerClassificationPipline.py
core/feature_extraction_components/embedding/: PyannoteEmbedding.py
core/preprocess_components/embedding/: PyannoteEmbedding.py
core/preprocess_components/encoding_converter/: WAVConverter.py
core/preprocess_components/file_mapper/: FilelistDataFrameCreator.py
examples/: using_vanpy_to_classify_emotions_on_RAVDESS_dataset.ipynb  using_voice_characterizer_to_classify_emotions_on_RAVDESS_dataset.ipynb  vanpy_example.ipynb  voice_characterization_example.ipynb
pretrained_models/: xgb_age_512_full_processor.pkl  xgb_age_512_model.pkl  xgb_age_512_simple_imputer.pkl  xgb_gender_512_full_processor.pkl  xgb_gender_512_model  xgb_gender_512_model.pkl  xgb_us_age_512_full_processor.pkl  xgb_us_age_512_model.pkl  xgb_us_age_512_simple_imputer.pkl
src/: pipeline.yaml  requirements_gpu.txt  run.py
src/notebook_examples/: pulp_fiction_analysis.ipynb  pyannote_sd.yaml  vanpy_example.ipynb
src/vanpy/: __init__.py
tests/: config.py  test_BasePipeline.py  test_ComponentPayload.py  test_FilelistDataFrameCreator.py  test_PipelineComponent.py  test_PyannoteVAD.py  test_utils.py
utils/: utils.py
vanpy/: __init__.py
vanpy/core/: BasePipline.py  ClassificationPipline.py  CombinedPipeline.py  ComponentPayload.py  FeatureExtractionPipline.py  PiplineComponent.py  PreprocessPipline.py
vanpy/utils/: utils.py
(+93 files in other folders)
